locale and fixed some spacing

--- a/app/client/components/DevSites/Preview/preview.scss
+++ b/app/client/components/DevSites/Preview/preview.scss
@@ -72,10 +72,13 @@
   .wrapper {
     padding: 2em 2em;
     margin-top: 50px;
+    margin-left: 4%;
+    margin-right: 4%;
     background-color: #fff;
 
     @media #{$small-and-down} {
       padding: 60px 20px 20px;
+      margin: 0;
     }
   }
 
